# LineArtColorization

./: .gitignore  CMakeLists.txt  Loger.cpp  Loger.h  MatProcess.cpp  README.md  colormodel.cpp  colormodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modelbase.h  scriblecolormodel.h
images/: images.qrc
include/: ColorModel.h  DoubleClickeableLabel.h  Loger.h  MatProcess.h  ModelBase.h  ScribbleColorModel.h
src/: ColorModel.cpp  Loger.cpp
